fix overflow-x-clip

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
+  overflow-x: clip; 
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
